# hot_constant

./: .gitignore  Cargo.toml
examples/: basic.rs  custom.rs  string.rs
src/: hot.rs  lib.rs  not_hot.rs
