[package]
name = "hot_constant"
version = "0.1.0"
edition = "2021"

[dependencies]
linkme = {version ="0.3", optional = true}
notify = {version ="6", optional = true}
escape_string = {version = "0.1", optional = true}

[dev-dependencies]
bevy_color = {version = "0.14"}

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "custom"
path = "examples/custom.rs"


[[example]]
name = "string"
path = "examples/string.rs"


[features]
hot = ["linkme", "notify"]
